# try_pixi_cpp_zstd_package

./: .gitignore  README.md  pixi.toml
.github/workflows/: ci.yml
zstd_app/: CMakeLists.txt  pixi.toml
zstd_app/src/: main.cpp
zstd_rs_wrapper/: CMakeLists.txt  Cargo.toml  pixi.toml
zstd_rs_wrapper/cmake/: zstd_rs_wrapperConfig.cmake.in
zstd_rs_wrapper/include/: zstd_rs_wrapper.h
zstd_rs_wrapper/src/: lib.rs
zstd_wrapper/: CMakeLists.txt  pixi.toml
zstd_wrapper/cmake/: zstd_wrapperConfig.cmake.in
zstd_wrapper/include/zstd_wrapper/: wrapper.hpp
zstd_wrapper/src/: wrapper.cpp
